--- a/css/style.css
+++ b/css/style.css
@@ -3,26 +3,61 @@ body{
     text-align: center;
     font-family: 'Poppins', sans-serif;
     overflow-x: hidden;
-    /*scroll-snap-type: y mandatory;
-    overflow-y: scroll;*/
+    /*scroll-snap-type: y mandatory;*/
 }
 /*
 .wrapper-1{
     scroll-snap-align: start;
 }*/
 
-.navbar{
-    width: 100%;
-    height: 80px;
-    background: rgba(0, 0, 0, 0.7);
-    color: white;
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    justify-content: center;
+/* ================================================== FIRST PART ================================================== */
+.wrapper-1{
+    filter: drop-shadow(0 10px 10px black);
 }
 
-/* ================================================== FIRST PART ================================================== */
+.navbar{
+    width: 100%;
+    height: auto;
+    padding-top: 5px;
+    color: white;
+    display: flex;
+    justify-content: center;
+    font-size: .9em;
+}
+
+.navbar h3{
+    font-weight: 400;
+}
+
+.navbar div{
+    font-weight: 100;
+    display: inline-block;
+    opacity: .5;
+    transform: scaleY(2);
+    margin: 0 .5em;
+}
+
+@keyframes arrow{
+    0%{
+        bottom: 5%;
+        left: 50%;
+        transform: translate(-50%,-95%);
+        opacity: .2;
+    }
+    50%{
+        bottom: 1%;
+        left: 50%;
+        transform: translate(-50%,-99%);
+        opacity: 1;
+    }
+    100%{
+        bottom: 5%;
+        left: 50%;
+        transform: translate(-50%,-95%);
+        opacity: .2;
+    }
+}
+
 #particles{
     position: absolute;
     top: 0;
@@ -31,7 +66,6 @@ body{
     height: 100vh;
     overflow: hidden;
     z-index: -2;
-    border-bottom-left-radius: 250px;
     overflow: hidden;
 }
 
@@ -46,12 +80,34 @@ body{
     justify-content: center;
 }
 
+#arrow{
+    width: 200px;
+    height: 100px;
+    position: absolute;
+    bottom: 0%;
+    left: 50%;
+    transform: translateX(-50%);
+    background: transparent;
+    cursor: pointer;
+    z-index: 3;
+}
+
+.landing > img{
+    width: 25px;
+    position: absolute;
+    bottom: 5%;
+    left: 50%;
+    transform: translate(-50%,-95%);
+    animation: arrow 2s linear infinite;
+    opacity: .2;
+}
+
 .name{
-   font-weight: 700;
-   letter-spacing: -.05em;
-   line-height: 50px;
-   font-size: 5em;
-   transform: scaleY(1.1);
+    font-weight: 700;
+    letter-spacing: -.05em;
+    line-height: 20px;
+    font-size: 5em;
+    transform: scaleY(1.1);
 }
 
 .profession{
@@ -64,56 +120,60 @@ body{
     transform: scaleY(2);
 }
 
-
 /* ================================================== SECOND PART ================================================== */
 
-.wrapper-2{
+.wrapper-2,
+.wrapper-3{
     position: relative;
     /*scroll-snap-align: start;*/
     width: 100%;
-    height: 100vh;
-    background: white;
-    border-top-right-radius: 250px;
+    min-height: 100vh;
+    margin: 30px auto; 
+    background: transparent;
 }
 
-.mask-2{
-    position: absolute;
-    top: 0;
-    right: 0;
-    height: 250px;
-    width: 250px;
-    z-index: -1;
-    background: black;
-}
-
-.about{
-    width: 100%;
+.about,
+.title{
+    width: 70%;
     height: 250px;
     display: flex;
     flex-direction: column;
     align-items: center;
     justify-content: center;
-    margin-bottom: 50px;
+    padding: 50px 0;
+    margin: auto;
+}
+
+.about h1,
+.title h1{
+    font-weight: 500;
+    font-size: 2.5em;
+}
+
+.about h5{
+    font-weight: 400;
+    font-size: 1em;
 }
 
 .projects{
     display: flex;
     flex-wrap: wrap;
     align-items: center;
-    justify-content: space-evenly;
+    justify-content: center;
     padding: 20px;
 }
 .project{
     position: relative;
     border-radius: 5px;
-    box-shadow: 2px 2px 20px 1px rgba(0, 0, 0, 0.555);
-    background: rgba(255, 0, 0, 0.815);
-    margin: 20px 0 0 2%;
-    flex-grow: 1;
-    height: 300px;
-    width: calc(100% * (1/4) - 1px);
-    min-width: 250px;
+    box-shadow: 0 10px 20px 1px rgb(16, 16, 16);
+    background: transparent;
+    margin: 20px;
+    height: 400px;
+    /*width: calc(100% * (1/4) - 1px);
+    min-width: 250px;*/
+    width: 300px;
     overflow: hidden;
+    background: transparent;
     transition: all .1s cubic-bezier(0.455, 0.03, 0.515, 0.955);
 }
 .project:hover{
@@ -132,24 +192,44 @@ body{
     letter-spacing: 0.1em;
     line-height: 200px;
     background: linear-gradient(to top, black, transparent);
+    display: none;
 }
 
 .ddreamkol{
     background: url('../media/ddreamkol.png');
     background-size: cover;
     background-position: center;
+    border-top-right-radius: 20px;
 }
 
 .lightbox{
     background: url('../media/lightbox.png');
     background-size: cover;
     background-position: center;
+    border-bottom-left-radius: 20px;
 }
 
 .login{
     background: url('../media/login.png');
     background-size: cover;
     background-position: center;
+    border-radius: 20px;
+}
+
+.news{
+    border-bottom-right-radius: 20px;
+}
+
+.codepen{
+    border-top-left-radius: 20px;
+}
+
+footer{
+    position: relative;
+    width: 100%;
+    height: auto;
+    margin-bottom: 5px;
+    font-size: .9em;
 }
 
 /* ================================================== MEDIA QUERIES ================================================== */
@@ -157,19 +237,21 @@ body{
 @media all and (max-width: 765px),
 (orientation: landscape) and (min-width: 800px) and (max-width: 840px){
     .name{
-        font-size: 2em;
+        font-size: 1.9em;
     }
     .profession{
         font-size: .5em;
     }
-    #particles{
-        border-bottom-left-radius: 70px;
+    .project{
+        width: 240px;
+        height: 340px;
     }
-    .wrapper-2{
-        border-top-right-radius: 70px;
+}
+@media all and (width: 768px){
+    .name{
+        font-size: 3em;
     }
-    .mask-2{
-        width: 70px;
-        height: 70px;
+    .profession{
+        font-size: 1em;
     }
 }
