--- a/css/style.css
+++ b/css/style.css
@@ -3,39 +3,6 @@ body{
     text-align: center;
     font-family: 'Poppins', sans-serif;
     overflow-x: hidden;
-    /*scroll-snap-type: y mandatory;*/
-}
-/*
-.wrapper-1{
-    scroll-snap-align: start;
-}*/
-
-/* ================================================== FIRST PART ================================================== */
-.wrapper-1{
-    filter: drop-shadow(0 10px 10px black);
-    height: auto;
-}
-
-.navbar{
-    width: 100%;
-    height: auto;
-    padding-top: 5px;
-    color: white;
-    display: flex;
-    justify-content: center;
-    font-size: .9em;
-}
-
-.navbar h3{
-    font-weight: 400;
-}
-
-.navbar div{
-    font-weight: 100;
-    display: inline-block;
-    opacity: .5;
-    transform: scaleY(2);
-    margin: 0 .5em;
 }
 
 @keyframes arrow{
@@ -43,7 +10,7 @@ body{
         bottom: 5%;
         left: 50%;
         transform: translate(-50%,-95%);
-        opacity: .2;
+        opacity: .3;
     }
     50%{
         bottom: 1%;
@@ -55,33 +22,13 @@ body{
         bottom: 5%;
         left: 50%;
         transform: translate(-50%,-95%);
-        opacity: .2;
+        opacity: .3;
     }
 }
 
-#particles{
-    position: absolute;
-    top: 0;
-    left: 0;
-    width: 100%;
-    height: 100vh;
-    overflow: hidden;
-    z-index: -2;
-    overflow: hidden;
-}
+a:focus{outline: 0;}
 
-.landing{
-    width: 100%;
-    height: calc(100vh - 80px);
-    color: white;
-    background: transparent;
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    justify-content: center;
-}
-
-#arrow{
+.goTo{
     width: 200px;
     height: 100px;
     position: absolute;
@@ -91,16 +38,96 @@ body{
     background: transparent;
     cursor: pointer;
     z-index: 3;
+    background: transparent;
 }
 
-.landing > img{
+.arrowImage{
     width: 25px;
     position: absolute;
     bottom: 5%;
     left: 50%;
     transform: translate(-50%,-95%);
     animation: arrow 2s linear infinite;
-    opacity: .2;
+    opacity: .3;
+}
+
+.divider{
+    font-weight: 100;
+    display: inline-block;
+    opacity: .5;
+    transform: scaleY(2);
+    margin: 0 .5em;
+}
+
+.title {
+    margin: auto;
+    font-weight: 400;
+    font-size: 2.5em;
+    padding-top: 50px;
+    line-height: 3em;
+    text-align: center;
+}
+.title span {
+    display: inline-block;
+    position: relative;  
+}
+.title span:before,
+.title span:after {
+    content: "";
+    position: absolute;
+    height: 1.5em;
+    border-bottom: 1px solid black;
+    top: 0;
+    width: 5em;
+}
+.title span:before {
+    right: 100%;
+    margin-right: 15px;
+}
+.title span:after {
+    left: 100%;
+    margin-left: 15px;
+}
+
+/* ================================================== FIRST PART ================================================== */
+.wrapper-1{
+    position: relative;
+    width: 100%;
+    height: 100vh;
+    color: white;
+}
+
+.navbar{
+    width: 100%;
+    height: 50px;
+    padding-top: 5px;
+    display: flex;
+    justify-content: center;
+    letter-spacing: -2px;
+}
+
+.navbar h3{
+    font-weight: 400;
+}
+
+#particles{
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100vh;
+    z-index: -2;
+}
+
+.landing{
+    width: 100%;
+    height: calc(100vh - 50px);
+    color: white;
+    background: transparent;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
 }
 
 .name{
@@ -112,49 +139,50 @@ body{
 }
 
 .profession{
-    font-weight: 100;
+    font-weight: 200;
     letter-spacing: .5em;
-}
-.profession div{
-    display: inline-block;
-    opacity: .5;
-    transform: scaleY(2);
 }
 
 /* ================================================== SECOND PART ================================================== */
 
-.wrapper-2,
-.wrapper-3{
+.wrapper-2{
     position: relative;
-    /*scroll-snap-align: start;*/
     width: 100%;
     min-height: 100vh;
     background: transparent;
 }
 
-.wrapper-2 h1,
-.title h1{
-    padding: 30px 0 0 0;
-    font-weight: 500;
-    font-size: 2.5em;
-}
-
-.wrapper-2 h5{
+.about-me{
     width: 70%;
-    padding: 10px 0 0 0;
     margin: auto;
-    font-weight: 400;
-    font-size: 1em;
 }
 
-.wrapper-2 > img{
-    width: 25px;
+.about{
+    margin: auto;
+    font-weight: 300;
+    font-size: 1em;
+    padding-top: 50px;
+}
+
+/* ================================================== THIRD PART ================================================== */
+
+.wrapper-3{
+    position: relative;
+    width: 100%;
+    min-height: 100vh;
+    overflow: hidden;
+}
+.wrapper-3::before{
+    content: "";
     position: absolute;
-    bottom: 5%;
-    left: 50%;
-    transform: translate(-50%,-95%);
-    animation: arrow 2s linear infinite;
-    opacity: .2;
+    top: 10%;
+    left: -50%;
+    z-index: -1;
+    width: 200%;
+    height: 90%;
+    background: linear-gradient(to bottom, rgba(3, 168, 157, 0.692) 20%,rgba(0, 75, 70, 0.678) 40%, white 90%,white 100%);
+    transform: rotateZ(3deg);
+    padding-bottom: 50px;
 }
 
 .projects{
@@ -163,6 +191,7 @@ body{
     align-items: center;
     justify-content: center;
     padding: 20px;
+    margin-bottom: 10px;
 }
 .project{
     position: relative;
@@ -177,10 +206,6 @@ body{
     overflow: hidden;
     background: transparent;
     transition: all .1s cubic-bezier(0.455, 0.03, 0.515, 0.955);
-}
-.project:hover{
-    transform: scale(1.001);
-    box-shadow: 0 0 30px 1px rgb(0, 0, 0);
 }
 
 .p_name{
@@ -226,11 +251,12 @@ body{
     border-top-left-radius: 20px;
 }
 
+/* ================================================== FOOTER ================================================== */
 footer{
     position: relative;
     width: 100%;
     height: auto;
-    margin-bottom: 5px;
+    margin-bottom: 10px;
     font-size: .9em;
 }
 
@@ -247,6 +273,10 @@ footer{
     .project{
         width: 240px;
         height: 340px;
+    }
+    .title span:before,
+    .title span:after {
+        width: 1em;
     }
 }
 @media all and (width: 768px){
