--- a/css/style.css
+++ b/css/style.css
@@ -5,6 +5,21 @@ body{
     overflow-x: hidden;
 }
 
+button:focus{outline: 0;}
+button{
+    min-width: 200px;
+    height: 40px;
+    border: none;
+    border-radius: 15px;
+    line-height: 40px;
+    margin: 10px;
+    color: white;
+    background: #008787;
+    filter: drop-shadow(0 3px 2px #0087879f);
+    cursor: pointer;
+    transition: all .1s cubic-bezier(0.175, 0.885, 0.32, 1.275);
+}
+
 @keyframes arrow{
     0%{
         bottom: 5%;
@@ -40,7 +55,6 @@ a:focus{outline: 0;}
     z-index: 3;
     background: transparent;
 }
-
 .arrowImage{
     width: 25px;
     position: absolute;
@@ -49,6 +63,10 @@ a:focus{outline: 0;}
     transform: translate(-50%,-95%);
     animation: arrow 2s linear infinite;
     opacity: .3;
+}
+
+.wrapper-3 .arrowImage{
+    margin-bottom: 50px;
 }
 
 .divider{
@@ -62,9 +80,9 @@ a:focus{outline: 0;}
 .title {
     margin: auto;
     font-weight: 400;
-    font-size: 2.5em;
-    padding-top: 50px;
-    line-height: 3em;
+    font-size: 2em;
+    padding-top: 20px;
+    line-height: 2em;
     text-align: center;
 }
 .title span {
@@ -75,7 +93,7 @@ a:focus{outline: 0;}
 .title span:after {
     content: "";
     position: absolute;
-    height: 1.5em;
+    height: 1em;
     border-bottom: 1px solid black;
     top: 0;
     width: 5em;
@@ -93,8 +111,9 @@ a:focus{outline: 0;}
 .wrapper-1{
     position: relative;
     width: 100%;
-    height: 100vh;
+    min-height: 100vh;
     color: white;
+    overflow: hidden;
 }
 
 .navbar{
@@ -150,18 +169,108 @@ a:focus{outline: 0;}
     width: 100%;
     min-height: 100vh;
     background: transparent;
+    overflow: hidden;
 }
 
 .about-me{
-    width: 70%;
-    margin: auto;
+    display: flex;
+    flex-wrap: wrap;
+    flex-direction: column;
+    align-items: center;
+    justify-content: space-evenly;
+    min-height: 90vh;
 }
 
 .about{
-    margin: auto;
+    width: 70%;
+    margin-bottom: 30px;
     font-weight: 300;
     font-size: 1em;
     padding-top: 50px;
+    align-self: center;
+}
+
+.other{
+    width: 90%;
+    height: 80px;
+    align-self: center;
+    margin-bottom: 5em;
+    display: flex;
+    flex-wrap: wrap;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+}
+
+.main-info{
+    width: 100%;
+    height: auto;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+}
+
+.card{
+    position: relative;
+    width: 300px;
+    height: 400px;
+    border-radius: 15px;
+}
+
+.card img{
+    position: absolute;
+    top: 20%;
+    left: 50%;
+    transform: translate(-50%,-20%);
+    width: 150px;
+    height: 150px;
+    border-radius: 50%;
+    border: 10px solid white;
+    object-fit: cover;
+}
+
+.lower::before{
+    content: "";
+    position: absolute;
+    bottom: 0;
+    left: 0;
+    width: 100%;
+    height: 140%;
+    background: #008787;
+    z-index: -2;
+    border-bottom-left-radius: 15px;
+    border-bottom-right-radius: 15px;
+    filter: drop-shadow(0 3px 2px #0087879f);    
+}
+
+.lower{
+    position: absolute;
+    bottom: 0;
+    left: 0;
+    width: 100%;
+    height: 50%;
+    background: transparent;
+    z-index: -2;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    color: white;
+}
+
+.lower h4{
+    font-weight: 400;
+    font-size: 1em;
+    margin: .7em 0;
+    text-align: left;
+    width: 80%;
+    line-height: 1.7em;
+}
+.lower h4 span{
+    font-weight: 300;
+    font-size: .9em;
+    float: right;
 }
 
 /* ================================================== THIRD PART ================================================== */
@@ -180,19 +289,22 @@ a:focus{outline: 0;}
     z-index: -1;
     width: 200%;
     height: 90%;
-    background: linear-gradient(to bottom, rgba(3, 168, 157, 0.692) 20%,rgba(0, 75, 70, 0.678) 40%, white 90%,white 100%);
+    background: linear-gradient(to bottom, rgba(	0, 58, 58, 0.692) 20%,rgba(0, 75, 70, 0.678) 40%, white 90%,white 100%);
     transform: rotateZ(3deg);
     padding-bottom: 50px;
 }
 
 .projects{
+    min-height: 85vh;
     display: flex;
     flex-wrap: wrap;
+    flex-direction: column;
     align-items: center;
-    justify-content: center;
+    justify-content: space-evenly;
     padding: 20px;
     margin-bottom: 10px;
 }
+/*
 .project{
     position: relative;
     border-radius: 5px;
@@ -200,12 +312,21 @@ a:focus{outline: 0;}
     background: transparent;
     margin: 20px;
     height: 400px;
-    /*width: calc(100% * (1/4) - 1px);
-    min-width: 250px;*/
     width: 300px;
     overflow: hidden;
     background: transparent;
-    transition: all .1s cubic-bezier(0.455, 0.03, 0.515, 0.955);
+}*/
+
+.project{
+    position: relative;
+    border-radius: 5px;
+    box-shadow: 0 10px 20px 1px rgb(16, 16, 16);
+    background: transparent;
+    height: 400px;
+    width: 300px;
+    overflow: hidden;
+    background: transparent;
+    border-radius: 15px;
 }
 
 .p_name{
@@ -226,34 +347,30 @@ a:focus{outline: 0;}
     background: url('../media/ddreamkol.png');
     background-size: cover;
     background-position: center;
-    border-top-right-radius: 20px;
 }
 
 .lightbox{
     background: url('../media/lightbox.png');
     background-size: cover;
     background-position: center;
-    border-bottom-left-radius: 20px;
 }
 
 .login{
     background: url('../media/login.png');
     background-size: cover;
     background-position: center;
-    border-radius: 20px;
-}
-
-.news{
-    border-bottom-right-radius: 20px;
-}
-
-.codepen{
-    border-top-left-radius: 20px;
 }
 
 /* ================================================== FOOTER ================================================== */
-footer{
+.goBack{
     position: relative;
+    width: 100%; 
+}
+footer{
+    position: absolute;
+    bottom: 0;
+    left: 50%;
+    transform: translate(-50%,0);
     width: 100%;
     height: auto;
     margin-bottom: 10px;
@@ -278,6 +395,17 @@ footer{
     .title span:after {
         width: 1em;
     }
+    .card{
+        height: 350px;
+    }
+    .card img{
+        top: 10%;
+        left: 50%;
+        transform: translate(-50%,-10%)
+    }
+    .about{
+        padding-top: 0;
+    }
 }
 @media all and (width: 768px){
     .name{
@@ -285,5 +413,16 @@ footer{
     }
     .profession{
         font-size: 1em;
+    }
+    .card{
+        height: 350px;
+    }
+    .card img{
+        top: 10%;
+        left: 50%;
+        transform: translate(-50%,-10%)
+    }
+    .about{
+        padding-top: 0;
     }
 }
