--- a/css/style.css
+++ b/css/style.css
@@ -5,7 +5,7 @@ body{
     overflow-x: hidden;
 }
 
-button:focus{outline: 0;}
+button:focus,a:focus{outline: 0;}
 button{
     min-width: 200px;
     height: 40px;
@@ -14,10 +14,12 @@ button{
     line-height: 40px;
     margin: 10px;
     color: white;
-    background: #008787;
-    filter: drop-shadow(0 3px 2px #0087879f);
+    background: coral;
     cursor: pointer;
-    transition: all .1s cubic-bezier(0.175, 0.885, 0.32, 1.275);
+}
+
+a{
+    z-index: 10;
 }
 
 @keyframes arrow{
@@ -52,7 +54,7 @@ a:focus{outline: 0;}
     transform: translateX(-50%);
     background: transparent;
     cursor: pointer;
-    z-index: 3;
+    z-index: 10;
     background: transparent;
 }
 .arrowImage{
@@ -63,6 +65,8 @@ a:focus{outline: 0;}
     transform: translate(-50%,-95%);
     animation: arrow 2s linear infinite;
     opacity: .3;
+    z-index: 5;
+    cursor: pointer;
 }
 
 .wrapper-3 .arrowImage{
@@ -94,9 +98,16 @@ a:focus{outline: 0;}
     content: "";
     position: absolute;
     height: 1em;
-    border-bottom: 1px solid black;
     top: 0;
     width: 5em;
+}
+.wrapper-2 .title span:before,
+.wrapper-2 .title span:after {
+    border-bottom: 1px solid white;
+}
+.wrapper-3 .title span:before,
+.wrapper-3 .title span:after {
+    border-bottom: 1px solid black;
 }
 .title span:before {
     right: 100%;
@@ -134,19 +145,19 @@ a:focus{outline: 0;}
     top: 0;
     left: 0;
     width: 100%;
-    height: 100vh;
+    height: 100%;
     z-index: -2;
 }
 
 .landing{
-    width: 100%;
-    height: calc(100vh - 50px);
-    color: white;
-    background: transparent;
     display: flex;
     flex-direction: column;
     align-items: center;
     justify-content: center;
+    width: 100%;
+    height: calc(100vh - 60px);
+    color: white;
+    background: transparent;
 }
 
 .name{
@@ -157,9 +168,32 @@ a:focus{outline: 0;}
     transform: scaleY(1.1);
 }
 
+.name span{
+    letter-spacing: -.01em;
+    -webkit-text-stroke: .5px white;
+    -webkit-text-fill-color: transparent;
+}
+
 .profession{
     font-weight: 200;
     letter-spacing: .5em;
+}
+
+.contacts{
+    width: 100%;
+    height: auto;
+    display: flex;
+    justify-content: center;
+}
+
+.contacts a img{
+    width: 35px;
+    margin: 10px 40px;
+    transition: all .5s cubic-bezier(0.175, 0.885, 0.32, 1.275);
+}
+
+.contacts a img:hover{
+    transform: scale(1.05);
 }
 
 /* ================================================== SECOND PART ================================================== */
@@ -168,8 +202,34 @@ a:focus{outline: 0;}
     position: relative;
     width: 100%;
     min-height: 100vh;
-    background: transparent;
+    background: black;
     overflow: hidden;
+    color: white;
+    display: flex;
+    flex-wrap: wrap;
+    flex-direction: column;
+    align-items: center;
+    justify-content: space-evenly;
+}
+
+.background{
+    position: absolute;
+    top: 0;
+    left: 0;
+    display: flex;
+    flex-wrap: wrap;
+    align-items: center;
+    justify-content: space-evenly;
+    width: 100%;
+    height: 100%;
+    opacity: .1;
+    filter:blur(2px);
+}
+
+.background img{
+    width: 150px;
+    height: 150px;
+    opacity: .3;
 }
 
 .about-me{
@@ -182,9 +242,10 @@ a:focus{outline: 0;}
 }
 
 .about{
+    position: relative;
     width: 70%;
     margin-bottom: 30px;
-    font-weight: 300;
+    font-weight: 200;
     font-size: 1em;
     padding-top: 50px;
     align-self: center;
@@ -213,50 +274,39 @@ a:focus{outline: 0;}
 
 .card{
     position: relative;
-    width: 300px;
+    width: 270px;
     height: 400px;
     border-radius: 15px;
+    overflow: hidden;
 }
 
 .card img{
     position: absolute;
-    top: 20%;
+    top: 5%;
     left: 50%;
-    transform: translate(-50%,-20%);
-    width: 150px;
-    height: 150px;
+    transform: translate(-50%,-5%);
+    width: 200px;
+    height: 200px;
     border-radius: 50%;
-    border: 10px solid white;
+    border: 10px solid black;
     object-fit: cover;
+    z-index: 3;
 }
 
-.lower::before{
-    content: "";
-    position: absolute;
-    bottom: 0;
-    left: 0;
-    width: 100%;
-    height: 140%;
-    background: #008787;
-    z-index: -2;
-    border-bottom-left-radius: 15px;
-    border-bottom-right-radius: 15px;
-    filter: drop-shadow(0 3px 2px #0087879f);    
-}
+
 
 .lower{
-    position: absolute;
-    bottom: 0;
-    left: 0;
     width: 100%;
-    height: 50%;
-    background: transparent;
-    z-index: -2;
+    height: 65%;
+    margin-top: 60%;
+    background: linear-gradient(rgba(0, 75, 75, 0.658), rgb(255, 127, 80));
+    z-index: 0;
     display: flex;
     flex-direction: column;
     align-items: center;
     justify-content: center;
     color: white;
+    padding-top: 20px;
 }
 
 .lower h4{
@@ -271,6 +321,10 @@ a:focus{outline: 0;}
     font-weight: 300;
     font-size: .9em;
     float: right;
+}
+
+.other{
+    padding: 30px 0;
 }
 
 /* ================================================== THIRD PART ================================================== */
@@ -289,7 +343,7 @@ a:focus{outline: 0;}
     z-index: -1;
     width: 200%;
     height: 90%;
-    background: linear-gradient(to bottom, rgba(	0, 58, 58, 0.692) 20%,rgba(0, 75, 70, 0.678) 40%, white 90%,white 100%);
+    background: linear-gradient(to bottom,rgba(255, 127, 80, 0.767)  20%, rgba(0, 165, 146, 0.836) 40%, white 90%,white 100%);
     transform: rotateZ(3deg);
     padding-bottom: 50px;
 }
@@ -395,16 +449,21 @@ footer{
     .title span:after {
         width: 1em;
     }
-    .card{
-        height: 350px;
+    .background img{
+        width: 120px;
+        height: 120px;
     }
     .card img{
-        top: 10%;
+        top: 5%;
         left: 50%;
-        transform: translate(-50%,-10%)
+        transform: translate(-50%,-5%)
     }
     .about{
         padding-top: 0;
+    }
+    .contacts a img{
+        width: 20px;
+        margin: 10px;
     }
 }
 @media all and (width: 768px){
@@ -413,14 +472,6 @@ footer{
     }
     .profession{
         font-size: 1em;
-    }
-    .card{
-        height: 350px;
-    }
-    .card img{
-        top: 10%;
-        left: 50%;
-        transform: translate(-50%,-10%)
     }
     .about{
         padding-top: 0;
