--- a/css/style.css
+++ b/css/style.css
@@ -19,6 +19,7 @@ button{
 }
 
 a{
+    text-decoration: none;
     z-index: 10;
 }
 
@@ -202,34 +203,14 @@ a:focus{outline: 0;}
     position: relative;
     width: 100%;
     min-height: 100vh;
-    background: black;
+    background: white;
     overflow: hidden;
-    color: white;
+    color: black;
     display: flex;
     flex-wrap: wrap;
     flex-direction: column;
     align-items: center;
     justify-content: space-evenly;
-}
-
-.background{
-    position: absolute;
-    top: 0;
-    left: 0;
-    display: flex;
-    flex-wrap: wrap;
-    align-items: center;
-    justify-content: space-evenly;
-    width: 100%;
-    height: 100%;
-    opacity: .1;
-    filter:blur(2px);
-}
-
-.background img{
-    width: 150px;
-    height: 150px;
-    opacity: .3;
 }
 
 .about-me{
@@ -245,7 +226,7 @@ a:focus{outline: 0;}
     position: relative;
     width: 70%;
     margin-bottom: 30px;
-    font-weight: 200;
+    font-weight: 300;
     font-size: 1em;
     padding-top: 50px;
     align-self: center;
@@ -275,7 +256,7 @@ a:focus{outline: 0;}
 .card{
     position: relative;
     width: 270px;
-    height: 400px;
+    height: 450px;
     border-radius: 15px;
     overflow: hidden;
 }
@@ -288,12 +269,10 @@ a:focus{outline: 0;}
     width: 200px;
     height: 200px;
     border-radius: 50%;
-    border: 10px solid black;
+    border: 15px solid white;
     object-fit: cover;
     z-index: 3;
 }
-
-
 
 .lower{
     width: 100%;
@@ -358,43 +337,77 @@ a:focus{outline: 0;}
     padding: 20px;
     margin-bottom: 10px;
 }
-/*
-.project{
-    position: relative;
-    border-radius: 5px;
-    box-shadow: 0 10px 20px 1px rgb(16, 16, 16);
-    background: transparent;
-    margin: 20px;
-    height: 400px;
-    width: 300px;
-    overflow: hidden;
-    background: transparent;
-}*/
 
 .project{
     position: relative;
     border-radius: 5px;
-    box-shadow: 0 10px 20px 1px rgb(16, 16, 16);
-    background: transparent;
+    box-shadow: 0 2px 20px 1px rgb(16, 16, 16);
     height: 400px;
     width: 300px;
     overflow: hidden;
-    background: transparent;
     border-radius: 15px;
+    background: rgba(0, 0, 0, 0.932);
 }
 
-.p_name{
+.project .mask{
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    opacity: .1;
+}
+
+.p_title{
+    position: absolute;
+    top: 10%;
+    left: 50%;
+    transform: translate(-50%,-10%);
+    font-size: 2em;
+    font-weight: 500;
+    letter-spacing: 0em;
+    color: white;
+}
+
+.lang{
+    position: relative;
+    width: 100%;
+    height: 40%;
+    margin-top: 100px;
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: center;
+    align-items: center;
+}
+
+.lang img{
+    width: 40px;
+    margin: 10px 25px;
+    filter: drop-shadow(0 0 2px white);
+}
+
+.details{
+    width: 300px;
+    height: 50px;
     position: absolute;
     bottom: 0;
     left: 0;
-    width: 100%;
-    height: 150px;
+    display: flex;
+    flex-wrap: nowrap;
+    justify-content: center;
+}
+
+.demo,
+.github,
+.codepen_btn{
+    width: 150px;
+    height: 50px;
+    background: rgba(0, 165, 146, 0.836);
+    border-right: 2px solid white;
+    line-height: 50px;
+    font-size: .8em;
+    font-weight: 300;
     color: white;
-    font-size: 2em;
-    letter-spacing: 0.1em;
-    line-height: 200px;
-    background: linear-gradient(to top, black, transparent);
-    display: none;
 }
 
 .ddreamkol{
@@ -404,7 +417,7 @@ a:focus{outline: 0;}
 }
 
 .lightbox{
-    background: url('../media/lightbox.png');
+    background: url('../media/lightbox-mobile.png');
     background-size: cover;
     background-position: center;
 }
@@ -413,6 +426,26 @@ a:focus{outline: 0;}
     background: url('../media/login.png');
     background-size: cover;
     background-position: center;
+}
+
+.news{
+    background: url('../media/news.png');
+    background-size: cover;
+    background-position: center;
+}
+
+.login + .details .github,
+.news + .details .github{
+    width: 300px;
+    border: none;
+}
+
+.codepen + .details .codepen_btn{
+    width: 300px;
+    border: none;
+}
+.codepen + div + .lang img{
+    width: 250px;
 }
 
 /* ================================================== FOOTER ================================================== */
@@ -433,7 +466,7 @@ footer{
 
 /* ================================================== MEDIA QUERIES ================================================== */
 
-@media all and (max-width: 765px),
+@media all and (max-width: 768px),
 (orientation: landscape) and (min-width: 800px) and (max-width: 840px){
     .name{
         font-size: 1.9em;
@@ -445,6 +478,51 @@ footer{
         width: 240px;
         height: 340px;
     }
+    
+
+    .p_title{
+        font-size: 1.5em;
+    }
+    
+    .lang{
+        position: relative;
+        margin-top: 75px;
+    }
+    
+    .lang img{
+        width: 30px;
+        margin: 5px 20px;
+    }
+    
+    .details{
+        width: 240px;
+        height: 40px;
+    }
+    
+    .demo,
+    .github,
+    .codepen_btn{
+        width: 120px;
+        height: 40px;
+        line-height: 40px;
+        font-size: .7em;
+    }
+
+    .login + .details .github,
+    .news + .details .github{
+        width: 240px;
+        border: none;
+    }
+
+    .codepen + .details .codepen_btn{
+        width: 240px;
+        border: none;
+    }
+    .codepen + div + .lang img{
+        width: 200px;
+    }
+
+
     .title span:before,
     .title span:after {
         width: 1em;
@@ -472,8 +550,5 @@ footer{
     }
     .profession{
         font-size: 1em;
-    }
-    .about{
-        padding-top: 0;
     }
 }
