--- a/css/style.css
+++ b/css/style.css
@@ -5,9 +5,6 @@ body{
     overflow-x: hidden;
     scroll-behavior: smooth;
     background: #fdfdfd;
-    -webkit-transition: background .8s cubic-bezier(0.175, 0.885, 0.32, 1.275);
-    -o-transition: background .8s cubic-bezier(0.175, 0.885, 0.32, 1.275);
-    transition: background .8s cubic-bezier(0.175, 0.885, 0.32, 1.275);
 }
 
 @-webkit-keyframes resize {
@@ -394,11 +391,27 @@ a:focus{outline: 0;}
     -o-transition: all 1.5s cubic-bezier(0.175, 0.885, 0.32, 1.275);
     transition: all 1.5s cubic-bezier(0.175, 0.885, 0.32, 1.275);
     cursor: pointer;
+    z-index: 5;
 }
-
+.mask{
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background: rgba(0, 0, 0, 0.842);
+    z-index: 2;
+    opacity: 0;
+    -webkit-transition: opacity 1.5s cubic-bezier(0.175, 0.885, 0.32, 1.275);
+    -o-transition: opacity 1.5s cubic-bezier(0.175, 0.885, 0.32, 1.275);
+    transition: opacity 1.5s cubic-bezier(0.175, 0.885, 0.32, 1.275);
+}
 .card:hover{
-    -webkit-box-shadow: 0 8px 40px rgba(255, 255, 255, 0.5);
-            box-shadow: 0 8px 40px rgba(255, 255, 255, 0.5);
+    -webkit-box-shadow: 0 8px 40px rgba(255, 255, 255, 0.3);
+            box-shadow: 0 8px 40px rgba(255, 255, 255, 0.3);
+}
+.card:hover + .mask{
+    opacity: 1;
 }
 .card img{
     position: absolute;
